# task

./: .gitignore  Dockerfile  Makefile  README.md  RELEASES.md  compose.yaml  pyproject.toml  run.sh  schema.yml
task/: logging.py  middlewares.py  settings.py  urls.py  views.py
task/apps/prefixes/: admin.py  apps.py  models.py  services.py
task/apps/prefixes/management/commands/: prefixes.py
task/apps/prefixes/migrations/: 0001_initial.py  0002_item.py  0003_alter_item_prefix.py
task/apps/prefixes/tests/: factories.py  tests_models.py  tests_services.py  tests_views.py
task/apps/prefixes/views/: serializers.py  urls.py  views.py
